@@ -24,8 +24,7 @@
         SetCrossToolchainPath
         SetCrossToolchainVariables
         PrepareLibTypeOpts "shared"
-        cd "${PKG_SRC_DIR}/${PKG_SUBDIR}"
-        autoreconf -vfi &>> "${LOG_DIR}/${PKG_SUBDIR}/configure.log"
+        GenerateConfigureScript
         ConfigureAutotoolsProject \
             --disable-udev
 
